[package]
name = "colorscheme-transformer"
version = "0.1.1"
edition = "2024"
# license-file = "LICENSE"
license = "MIT"
description = " A tool for manipulationg colorschemes"
repository = "https://github.com/WASDetchan/colorscheme-transformer/"
readme = "README.md"
categories = ["command-line-utilities"]

[dependencies]
serde_yml = "0.0.12"
serde = "1.0.219"
regex = "1.11.1"
clap = { version = "4.5", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
