[package]
name = "colorscheme-transformer"
version = "0.1.3"
edition = "2024"
# license-file = "LICENSE"
license = "MIT"
description = " A tool for manipulating colorschemes"
repository = "https://github.com/WASDetchan/colorscheme-transformer/"
readme = "README.md"
categories = ["command-line-utilities"]

[dependencies]
serde_yml = "0.0.12"
serde = "1.0.219"
regex = "1.11.1"
clap = { version = "4.5", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
csscolorparser = {version= "0.7.2", default-features = false, features = ["rust-rgb"]}
rgb = "0.8"
thiserror = "2.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
assert_fs = "1.1"
